# mc-peptide

./: .bumpversion.cfg  .gitignore  CITATION.cff  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/UI/: Chat.py  paper.py
src/UI/pages/: Dataset.py
src/mc_peptide/: __init__.py  __main__.py  bert-chunking.py  chroma.py  cli.py  llama-chunking.py  version.py
src/mc_peptide/datextract/: __init__.py  merger.py  rag.py  signatures.py
tests/: __init__.py  test_version.py
